@@ -86,7 +86,7 @@ subroutine geom_opt_run(scf, sys, h)
     sys%atom(i+1)%x(2) = x(3*i + 2)
     sys%atom(i+1)%x(3) = x(3*i + 3)
   end do
-  call system_write_xyz("min", sys)
+  call system_write_xyz("", "min", sys)
   
   deallocate(x)
 
@@ -135,7 +135,7 @@ subroutine geom_calc_point(x, f, df)
     geo%sys%atom(i+1)%x(2) = x(3*i + 2)
     geo%sys%atom(i+1)%x(3) = x(3*i + 3)
   end do
-  call system_write_xyz("work-min", geo%sys)
+  call system_write_xyz("", "work-min", geo%sys)
 
   ! generate external potential
   call generate_external_pot(geo%h, geo%sys)
